# invoice_act

./: .coverage  .gitignore  AGENTS.md  README.md  clean_db.bat  clone_rep.bat  clone_repo.bat  git_status.bat  pyproject.toml  run_e2e.bat  run_tests.bat  test_results.html
e2e/: conftest.py  test_dashboard.py
src/: database.py  main.py
src/templates/: contractor.html  dashboard.html  employees.html  import.html  linked_acts.html  nav.html  unlinked_acts.html
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_utils.py
